# wshminer

./: .gitmodules  .travis.yml  BuildInfo.h.in  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
cmake/: WshCheckCXXFlags.cmake  WshCompilerSettings.cmake  variables.ps1.in  variables.sh.in
libapicore/: Api.h  ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  RLP.cpp  RLP.h  SHA3.cpp  SHA3.h  Terminal.h  Worker.cpp  Worker.h
libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapamdsysfs.cpp  wraphelper.h  wrapnvml.cpp
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h
libpoolprotocols/getwork/: WshGetworkClient.cpp  WshGetworkClient.h  getwork .json  jsonrpc_getwork.h
libpoolprotocols/stratum/: WshStratumClient.cpp  WshStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
libwshash/: CMakeLists.txt  compiler.h  data_sizes.h  endian.h  fnv.h  internal.c  internal.h  sha3.h  wshash.h
libwshash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel_experimental.cl  CLMiner_kernel_stable.cl  CMakeLists.txt
libwshash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  dagger_shuffled.cuh  wshash_cuda_miner_kernel.cu  wshash_cuda_miner_kernel.h
libwshcore/: BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  Exceptions.h  Farm.h  Miner.cpp  Miner.h  WshashAux.cpp  WshashAux.h
wshminer/: CMakeLists.txt  DBusInt.h  MinerAux.h  main.cpp
